# sudoku-py

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml
sudoku_solve/: group_exclusive_solver.py  hidden_pairs_solver.py  naked_pairs_solver.py  only_option_solver.py  pointing_pairs_solver.py  puzzle.py  puzzle_library.py  puzzle_read.py  puzzle_render.py  solver.py  util.py
tests/: test_cell.py  test_pointing_pairs_solver.py  test_puzzle_read_render.py  test_solve_puzzle.py
