[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudoku_solve"
version = "0.0.1"
authors = [
    { name = "Wesley Hartford", email = "wesley@cutterslade.ca" }
]
description = "Sudoku puzzle solver"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/wfhartford/sudoku-py"
Issues = "https://github.com/wfhartford/sudoku-py/issues"
